--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy .NET app to VPS
 on:
   push:
     branches:
-      - main
+      - deploy
 
 jobs:
   deploy:
@@ -23,6 +23,17 @@ jobs:
           dotnet restore BackEnd/BackEnd.csproj
           dotnet publish BackEnd/BackEnd.csproj -c Release -o ./publish
 
+      - name: Clean old publish folder on VPS
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          key: ${{ secrets.VPS_SSH_KEY }}
+          script: |
+            echo "🧹 Cleaning old publish folder"
+            rm -rf ~/apps/EcoQuest/EcoQuest.Travel.BackEnd/publish
+            mkdir -p ~/apps/EcoQuest/EcoQuest.Travel.BackEnd/publish
+
       - name: Copy publish folder to VPS
         uses: appleboy/scp-action@v0.1.3
         with:
@@ -30,7 +41,7 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           source: "./publish"
-          target: "~/apps/EcoQuest/EcoQuest.Travel.BackEnd"
+          target: "~/apps/EcoQuest/EcoQuest.Travel.BackEnd/publish"
 
       - name: SSH and deploy on VPS
         uses: appleboy/ssh-action@v1.0.3
@@ -39,28 +50,27 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
-            script: |
-              cd ~/apps/EcoQuest/EcoQuest.Travel.BackEnd/publish
-              cp ~/envs/ecoquest/.env .env && echo "✅ Copied .env successfully" || echo "❌ Failed to copy .env"
-              export $(grep CONNECTION_STRING .env | xargs)
+            cd ~/apps/EcoQuest/EcoQuest.Travel.BackEnd/publish
+            cp ~/envs/ecoquest/.env .env && echo "✅ Copied .env successfully" || echo "❌ Failed to copy .env"
+            export $(grep CONNECTION_STRING .env | xargs)
             
-              echo "🔍 Checking existing app process..."
-              PID=$(ps aux | grep "EcoQuest.Travel.BackEnd.dll" | grep -v grep | awk '{print $2}')
-              if [ -n "$PID" ]; then
+            echo "🔍 Checking existing app process..."
+            PID=$(ps aux | grep "EcoQuest.Travel.BackEnd.dll" | grep -v grep | awk '{print $2}')
+            if [ -n "$PID" ]; then
               echo "🛑 Killing process $PID"
               kill -9 $PID
-              else
+            else
               echo "⚠️ No process found"
-              fi
+            fi
             
-              echo "🚀 Starting new application"
-              nohup dotnet EcoQuest.Travel.BackEnd.dll > output.log 2>&1 &
-              echo "✅ Started application"
+            echo "🚀 Starting new application"
+            nohup dotnet EcoQuest.Travel.BackEnd.dll > output.log 2>&1 &
+            echo "✅ Started application"
 
-              sleep 40
-              echo "📄 Checking output.log"
-              ls -l output.log || echo "❌ output.log not found"
-              cat output.log || echo "⚠️ Cannot read output.log"
-            
+            sleep 40
+            echo "📄 Checking output.log"
+            ls -l output.log || echo "❌ output.log not found"
+            cat output.log || echo "⚠️ Cannot read output.log"
+
       - name: Notify app URL
         run: echo "App is running at http://${{ secrets.VPS_HOST }}:5269"
