[Upd][deploy.yml] Update GitHub Actions workflow for deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,9 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 9.0.x
+          
+      - name: Clean publish folder
+        run: rm -rf ./publish
 
       - name: Build and publish on runner
         run: |
