--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 9.0.x
-          
+
       - name: Clean publish folder
         run: rm -rf ./publish
 
@@ -43,8 +43,8 @@ jobs:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
-          source: "./publish/*"
-          target: "~/apps/EcoQuest/EcoQuest.Travel.BackEnd/publish"
+          source: "./publish"
+          target: "~/apps/EcoQuest/EcoQuest.Travel.BackEnd"
 
       - name: SSH and deploy on VPS
         uses: appleboy/ssh-action@v1.0.3
@@ -56,7 +56,7 @@ jobs:
             cd ~/apps/EcoQuest/EcoQuest.Travel.BackEnd/publish
             cp ~/envs/ecoquest/.env .env && echo "✅ Copied .env successfully" || echo "❌ Failed to copy .env"
             export $(grep CONNECTION_STRING .env | xargs)
-            
+
             echo "🔍 Checking existing app process..."
             PID=$(ps aux | grep "EcoQuest.Travel.BackEnd.dll" | grep -v grep | awk '{print $2}')
             if [ -n "$PID" ]; then
@@ -65,12 +65,12 @@ jobs:
             else
               echo "⚠️ No process found"
             fi
-            
+
             echo "🚀 Starting new application"
             nohup dotnet EcoQuest.Travel.BackEnd.dll > output.log 2>&1 &
             echo "✅ Started application"
 
-            sleep 40
+            sleep 10
             echo "📄 Checking output.log"
             ls -l output.log || echo "❌ output.log not found"
             cat output.log || echo "⚠️ Cannot read output.log"
