--- a/BackEnd/BackEnd.csproj
+++ b/BackEnd/BackEnd.csproj
@@ -27,10 +27,11 @@
         <PackageReference Include="NLog.Config" Version="4.7.15" />
         <PackageReference Include="NSwag.AspNetCore" Version="14.2.0" />
         <PackageReference Include="OpenIddict" Version="6.0.0" />
-        <PackageReference Include="OpenIddict.Abstractions" Version="6.0.0" />
+        <PackageReference Include="OpenIddict.Abstractions" Version="6.3.0" />
         <PackageReference Include="OpenIddict.AspNetCore" Version="6.0.0" />
         <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="6.0.0" />
         <PackageReference Include="OpenIddict.EntityFrameworkCore.Models" Version="6.0.0" />
+        <PackageReference Include="OpenIddict.Server" Version="6.3.0" />
         <PackageReference Include="OpenIddict.Validation.AspNetCore" Version="6.0.0" />
         <PackageReference Include="OpenIddict.Validation.SystemNetHttp" Version="6.0.0" />
     </ItemGroup>
