--- a/BackEnd/BackEnd.csproj
+++ b/BackEnd/BackEnd.csproj
@@ -49,4 +49,11 @@
       <Folder Include="DTOs\Destination\" />
     </ItemGroup>
 
+    <ItemGroup>
+        <Content Include="Settings/ConstanstCSV/MessageId.csv">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+        </Content>
+    </ItemGroup>
+
 </Project>
