--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy EcoQuest App to VPS
+name: Deploy Dockerized .NET App to VPS
 
 on:
   push:
@@ -13,7 +13,12 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v3
 
-      - name: Copy source code & docker files to VPS
+      # Write .env file from secret
+      - name: Write .env file from ENV_FILE_CONTENT
+        run: echo "${{ secrets.ENV_FILE_CONTENT }}" > .env
+
+      # Copy source code and .env to VPS
+      - name: Copy source code and .env to VPS
         uses: appleboy/scp-action@v0.1.3
         with:
           host: ${{ secrets.VPS_HOST }}
@@ -22,32 +27,26 @@ jobs:
           source: "."
           target: "~/apps/EcoQuest/EcoQuest.Travel.BackEnd"
 
-      - name: Copy .env to VPS
-        uses: appleboy/scp-action@v0.1.3
-        with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.VPS_SSH_KEY }}
-          source: "./.env"
-          target: "~/apps/EcoQuest/EcoQuest.Travel.BackEnd"
-
-      - name: SSH into VPS and deploy Docker container
+      # SSH into VPS and run docker-compose
+      - name: SSH into VPS and deploy Docker
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
+            echo "📦 Pulling latest code in ~/apps/EcoQuest/EcoQuest.Travel.BackEnd"
             cd ~/apps/EcoQuest/EcoQuest.Travel.BackEnd
-            echo "🧹 Cleaning old containers/images..."
-            docker compose down
-            docker system prune -f
 
-            echo "🐳 Building & starting containers..."
-            docker compose up -d --build
+            echo "🐳 Running docker-compose up -d --build"
+            docker-compose up -d --build
 
-            echo "🔍 Docker containers running:"
-            docker ps
+            echo "✅ Docker containers status:"
+            docker ps -a
 
-            echo "📦 Logs:"
-            docker compose logs --tail=50
+            echo "📄 Logs from container:"
+            docker logs $(docker ps -q --filter "ancestor=ecoquest-backend") || echo "⚠️ Cannot fetch logs"
+
+      # Optional: Notify app URL
+      - name: Notify app URL
+        run: echo "App should be available at http://${{ secrets.VPS_HOST }}:5269"
